# IoT-Infrarood

./: .gitignore  CMakeLists.txt  meetanalyse.xlsx  readme.md
imgs/: elektromagnetische straling spectrum.xml
opdracht-1/: main.cpp  schema.fzz
opdracht-10/: main.cpp  schema.fzz
opdracht-11/: ircodes.h  main.cpp  main.h  schema.fzz
opdracht-2/: main.cpp
opdracht-3/: main.cpp  schema.fzz
opdracht-4/test1/: main.cpp
opdracht-4/test2/: main.cpp
opdracht-5/: main.cpp  testdata.csv
opdracht-6/: main.cpp
opdracht-7/: main.cpp  testdata.csv
opdracht-8/: main.cpp  schema.fzz  testdata.csv
opdracht-9/: circulairbuffer.cpp  main.cpp  testdata.csv  testdata.tsv
